--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ starter/htdocs/stylesheets/
 starter/htdocs/system.config.php
 starter/htdocs/system.jsmap.php
 starter/htdocs/templates/
-
-starter/configs/system.config.pavka.phpvendor/
 starter/htdocs/logs/*
+starter/configs/system.config.pavka.php
+vendor/
