Platform packages updated

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,23 @@
 {
     "name": "energine/cmf",
-    "description": "Energine is content management framework based on the XML/XSLT transformations.",
+    "description": "Energine is a content management framework based on the XML/XSLT transformations.",
     "minimum-stability": "stable",
     "license": "MIT",
     "keywords": ["xml", "xslt", "framework", "cmf"],
     "homepage": "http://energine.net/",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.4.0",
+        "ext-dom":"*",
+        "ext-gd":"*",
+        "ext-json":"*",
+        "ext-libxml":"*",
+        "ext-mbstring":"*",
+        "ext-PDO":"*",
+        "ext-pdo_mysql":"*",
+        "ext-SimpleXML":"*",
+        "ext-session":"*",
+        "ext-tidy":"*",
+        "ext-xsl":"*"
     },
     "autoload": {
         "psr-4": {
