--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ starter/htdocs/system.jsmap.php
 starter/htdocs/templates/
 starter/htdocs/logs/*
 starter/configs/system.config.dev.php
-vendor/
+starter/vendor/
